--- a/Codigo/Projeto/style/Stylelogin.css
+++ b/Codigo/Projeto/style/Stylelogin.css
@@ -41,7 +41,7 @@ body {
     font-family: var(--font-primary);
     height: 100vh;
     width: 100vw;
-    background-image: linear-gradient(rgba(106, 90, 205, 0.3), rgba(106, 90, 205, 0.3)), url('/Codigo/Projeto/pages/img/fundoLivros.png');
+    background-image: linear-gradient(rgba(106, 90, 205, 0.3), rgba(106, 90, 205, 0.3)), url('../pages/img/fundoLivros.png');
     background-size:cover;
     /* Certifique-se de que a imagem cubra toda a área sem cortar */
     background-position: bottom;
