--- a/Codigo/Projeto/style/cadastrar-livros.css
+++ b/Codigo/Projeto/style/cadastrar-livros.css
@@ -32,7 +32,7 @@ body {
     font-family: var(--font-primary);
     min-height: 100vh;
     width: 100vw;
-    background-image: linear-gradient(rgba(106, 90, 205, 0.3), rgba(106, 90, 205, 0.3)), url('/Codigo/Projeto/pages/img/fundoLivros.png');
+    background-image: linear-gradient(rgba(106, 90, 205, 0.3), rgba(106, 90, 205, 0.3)), url('../pages/img/fundoLivros.png');
     background-size: cover;
     background-position: bottom;
     background-repeat: no-repeat;
